Fix lists uneven padding

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -31,6 +31,7 @@ ul.todos {
 #the-list ul {
   margin: 0;
   list-style: none;
+  padding: 0;
 }
 #the-list ul li {
   text-align: left;
